# web

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
macros/: Cargo.toml
macros/src/: builder.rs  lib.rs
src/: app.rs  cookie.rs  lib.rs  route.rs
src/io/: mod.rs  request.rs  response.rs  status.rs
static/: 404.html
testing/: Cargo.toml  simple.rs
testing/src/: main.rs
web/: Cargo.toml
web/src/: app.rs  endpoint.rs  lib.rs  request.rs  response.rs  route.rs  status.rs
web/src/io/: response.rs
