[package]
name = "web"
version = "0.1.0"
authors = ["Elliot Bobrow <elliotgreybobrow@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net"] }
phf = { version = "0.7.24", features = ["macros"] }
regex = "1"
serde_json = "1.0"
