[package]
name = "testing"
version = "0.1.0"
authors = ["Elliot Bobrow <elliotgreybobrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web = { version = "0.1.0", path = "../web" }

[[example]]
name = "simple"
path = "simple.rs"
